manifests/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-management
  namespace: dev
spec:
  selector:
    app: employee-management
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
