manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-management-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: employee-local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-management
                port:
                  number: 80
